[gd_scene load_steps=2 format=3 uid="uid://cydqjfmh85xwq"]

[ext_resource type="Script" path="res://scripts/GUI/level_notification.gd" id="1_s5onj"]

[node name="LevelNotification" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_s5onj")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -163.5
offset_top = -44.0
offset_right = 163.5
offset_bottom = 44.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="LevelNotification" type="Label" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "Level Here"

[node name="NotificationTimer" type="Timer" parent="."]

[connection signal="timeout" from="NotificationTimer" to="." method="_on_notification_timer_timeout"]
